update with 13 changes

--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -64,35 +65,35 @@
 <section class="content">
 <header>
 <h1>Final Cut Pro X</h1>
-<div class="title-date">2020년 4월 23일 수정</div>
+<div class="title-date">2020년 4월 30일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org56cbc52">단축키</a>
+<li><a href="#org69c7c80">단축키</a>
 <ul>
-<li><a href="#org7e45a9e">프로젝트(Project)</a></li>
-<li><a href="#org7d231d9">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org4ffa2f4">타임라인(Timeline)</a></li>
-<li><a href="#org0d06cb3">플레이(Play or Preview)</a></li>
+<li><a href="#org13b5832">프로젝트(Project)</a></li>
+<li><a href="#orgbc1a174">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#orge46d9a2">타임라인(Timeline)</a></li>
+<li><a href="#org1fb0a8f">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 <p>
-Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
+Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편집 소프트웨어다.
 따라서 과거에는 어땠는지 모르겠지만, 지금은 <a href="macos.html">macOS</a> 용 버전만 제공된다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org56cbc52" class="outline-2">
-<h2 id="org56cbc52">단축키</h2>
-<div class="outline-text-2" id="text-org56cbc52">
+<div id="outline-container-org69c7c80" class="outline-2">
+<h2 id="org69c7c80">단축키</h2>
+<div class="outline-text-2" id="text-org69c7c80">
 </div>
-<div id="outline-container-org7e45a9e" class="outline-3">
-<h3 id="org7e45a9e">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org7e45a9e">
+<div id="outline-container-org13b5832" class="outline-3">
+<h3 id="org13b5832">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org13b5832">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -101,9 +102,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org7d231d9" class="outline-3">
-<h3 id="org7d231d9">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org7d231d9">
+<div id="outline-container-orgbc1a174" class="outline-3">
+<h3 id="orgbc1a174">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-orgbc1a174">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -118,9 +119,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org4ffa2f4" class="outline-3">
-<h3 id="org4ffa2f4">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org4ffa2f4">
+<div id="outline-container-orge46d9a2" class="outline-3">
+<h3 id="orge46d9a2">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-orge46d9a2">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -145,9 +146,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org0d06cb3" class="outline-3">
-<h3 id="org0d06cb3">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-org0d06cb3">
+<div id="outline-container-org1fb0a8f" class="outline-3">
+<h3 id="org1fb0a8f">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-org1fb0a8f">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -174,7 +175,7 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
 <div class="article-link-date">
-2020년 4월 23일 수정</div>
+2020년 4월 30일 수정</div>
 </div>
 </div>
 </div>
