--- a/note/macos.html
+++ b/note/macos.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -64,21 +65,21 @@
 <section class="content">
 <header>
 <h1>macOS</h1>
-<div class="title-date">2020년 4월 25일 수정</div>
+<div class="title-date">2020년 4월 30일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgfc7119f">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org3a37b1f">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgd643614">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orge521257">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org6f11f3b">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org3e8ae62">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
 <p>
-macOS 는 그 애플의 독자 OS다.
-내부는 유닉스(BSD)를 기원으로 하는 OS이며
-껍데기(?)는 전신인 <a href="nextstep.html">NeXTSTEP</a>에서 많은 영향을 받은 것이 현재의 macOS 다.
+macOS 는 <a href="apple.html">애플</a> 맥 컴퓨터 구동에 필수적인 운영체계(Operating System) 소프트웨어의 이름이다.
+내부는 유닉스(BSD Unix)를 기원으로 하는 OS이며
+전반적으로 전신에 해당하는 <a href="nextstep.html">NeXTSTEP</a>에서 많은 영향을 받은 것으로 보인다.
 </p>
 
 <p>
@@ -96,17 +97,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-orgfc7119f" class="outline-2">
-<h2 id="orgfc7119f">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-orgfc7119f">
+<div id="outline-container-orge521257" class="outline-2">
+<h2 id="orge521257">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orge521257">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org3a37b1f" class="outline-2">
-<h2 id="org3a37b1f">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org3a37b1f">
+<div id="outline-container-org6f11f3b" class="outline-2">
+<h2 id="org6f11f3b">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org6f11f3b">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -126,9 +127,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd643614" class="outline-2">
-<h2 id="orgd643614">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orgd643614">
+<div id="outline-container-org3e8ae62" class="outline-2">
+<h2 id="org3e8ae62">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org3e8ae62">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -160,6 +161,41 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
+<div class="article-link-date">
+2020년 4월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
+<div class="article-link-date">
+2020년 4월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/nextstep.html">NeXTSTEP</a></h2>
+<div class="article-link-date">
+2020년 4월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
+<div class="article-link-date">
+2020년 4월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/apple.html">애플</a></h2>
+<div class="article-link-date">
+2020년 4월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <div class="article-link-date">
 2020년 4월 26일 수정</div>
@@ -170,27 +206,6 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/nextstep.html">NeXTSTEP</a></h2>
-<div class="article-link-date">
-2020년 4월 24일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
-<div class="article-link-date">
-2020년 4월 23일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
-<div class="article-link-date">
-2020년 4월 23일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -240,13 +255,6 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h2><a class="article-link-title" href="/note/imagemagick.html">ImageMagick</a></h2>
 <div class="article-link-date">
 2020년 4월 21일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
-<div class="article-link-date">
-2020년 4월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
