--- a/note/motion.html
+++ b/note/motion.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -64,27 +65,27 @@
 <section class="content">
 <header>
 <h1>Motion</h1>
-<div class="title-date">2020년 4월 23일 수정</div>
+<div class="title-date">2020년 4월 30일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga13f1ff">단축키</a></li>
-<li><a href="#org8066cc4">팁</a>
+<li><a href="#orgc7ebc0a">단축키</a></li>
+<li><a href="#org1c98805">팁</a>
 <ul>
-<li><a href="#orgde6b0fd">효과 적용 시간 보장하기</a></li>
+<li><a href="#orga3c7b73">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#org491398e">기타</a>
+<li><a href="#org62b7cb9">기타</a>
 <ul>
-<li><a href="#orge3cf6a4">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#orgf1534d0">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 <p>
-애플의 애니메이션 및 타이틀, 효과 등의 템플릿을 작성하는 소프트웨어다.
+<a href="apple.html">애플</a>에서 개발한 애니메이션 및 타이틀, 효과 등의 템플릿을 작성하는 소프트웨어다.
 그래서 당연하게도 <a href="macos.html">macOS</a> 용 버전만 제공된다.
 </p>
 
@@ -93,9 +94,9 @@
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-orga13f1ff" class="outline-2">
-<h2 id="orga13f1ff">단축키</h2>
-<div class="outline-text-2" id="text-orga13f1ff">
+<div id="outline-container-orgc7ebc0a" class="outline-2">
+<h2 id="orgc7ebc0a">단축키</h2>
+<div class="outline-text-2" id="text-orgc7ebc0a">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -103,13 +104,13 @@
 </dl>
 </div>
 </div>
-<div id="outline-container-org8066cc4" class="outline-2">
-<h2 id="org8066cc4">팁</h2>
-<div class="outline-text-2" id="text-org8066cc4">
+<div id="outline-container-org1c98805" class="outline-2">
+<h2 id="org1c98805">팁</h2>
+<div class="outline-text-2" id="text-org1c98805">
 </div>
-<div id="outline-container-orgde6b0fd" class="outline-3">
-<h3 id="orgde6b0fd">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-orgde6b0fd">
+<div id="outline-container-orga3c7b73" class="outline-3">
+<h3 id="orga3c7b73">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-orga3c7b73">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -127,13 +128,13 @@
 </div>
 </div>
 </div>
-<div id="outline-container-org491398e" class="outline-2">
-<h2 id="org491398e">기타</h2>
-<div class="outline-text-2" id="text-org491398e">
+<div id="outline-container-org62b7cb9" class="outline-2">
+<h2 id="org62b7cb9">기타</h2>
+<div class="outline-text-2" id="text-org62b7cb9">
 </div>
-<div id="outline-container-orge3cf6a4" class="outline-3">
-<h3 id="orge3cf6a4">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-orge3cf6a4">
+<div id="outline-container-orgf1534d0" class="outline-3">
+<h3 id="orgf1534d0">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-orgf1534d0">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -160,7 +161,7 @@
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
 <div class="article-link-date">
-2020년 4월 23일 수정</div>
+2020년 4월 30일 수정</div>
 </div>
 </div>
 </div>
