--- a/note/nextstep.html
+++ b/note/nextstep.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -64,10 +65,10 @@
 <section class="content">
 <header>
 <h1>NeXTSTEP</h1>
-<div class="title-date">2020년 4월 24일 수정</div>
+<div class="title-date">2020년 4월 30일 수정</div>
 </header>
 <p>
-애플의 공동 설립자인 스티브 잡스가 설립한 회사인 NeXT에서 만든 OS다.
+<a href="apple.html">애플</a> 공동 설립자인 스티브 잡스가 설립한 회사인 NeXT에서 만든 OS다.
 맥의 운영체제인 <a href="macos.html">macOS</a>, 그리고 그 전신인 OS X의 기반이 되는 OS이기도 하다.
 따라서 당연하게도 BSD 커널 기반의 유닉스 계열 운영체제다.
 </p>
@@ -105,7 +106,7 @@ OS X이나 macOS의 전신인 만큼,
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
 <div class="article-link-date">
-2020년 4월 25일 수정</div>
+2020년 4월 30일 수정</div>
 </div>
 </div>
 </div>
