--- a/note/apple.html
+++ b/note/apple.html
@@ -4,14 +4,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>Home - Seorenn</title>
-<meta name="twitter:title" content="Home" />
-<meta name="og:title" content="Home" />
-<meta name="description" content="Seorenn Home Page" />
-<meta name="twitter:description" content="Seorenn Home Page" />
-<meta name="og:description" content="Seorenn Home Page" />
-<link rel="canonical" href="https://seorenn.github.io/" />
-<meta property="og:url" content="https://seorenn.github.io/" />
+<title>애플 - Seorenn</title>
+<meta name="twitter:title" content="애플" />
+<meta name="og:title" content="애플" />
+<meta name="description" content="애플(Apple)에 대한 토막 글" />
+<meta name="twitter:description" content="애플(Apple)에 대한 토막 글" />
+<meta name="og:description" content="애플(Apple)에 대한 토막 글" />
+<link rel="canonical" href="https://seorenn.github.io/note/apple.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/apple.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -63,60 +63,103 @@
 <div class="left-empty">
 </div>
 <section class="content">
-<div class="summary-container">
-<h1>❏ POST의 최신 글</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/many-ad-and.html">광고를 덕지덕지 바른 후</a></h2>
-<div class="article-link-date">
-2020년 4월 27일 작성</div>
+<header>
+<h1>애플</h1>
+<div class="title-date">2020년 4월 30일 수정</div>
+</header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#orgbc9b263">맥</a></li>
+<li><a href="#org28c5da2">아이폰</a></li>
+<li><a href="#org6978af1">아이패드 및 기타</a></li>
+<li><a href="#org0f0d537">소프트웨어</a></li>
+<li><a href="#org595c34a">세계 최고의 시가총액을 가진 회사</a></li>
+</ul>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/humanlike-google-2.html">구글의 인간력(?)과의 싸움은 계속된다</a></h2>
-<div class="article-link-date">
-2020년 4월 24일 작성</div>
+<p>
+애플은 일반적으로 사과를 의미하는 영어 단어&#x2026;여야 하는데, 실상은 미국의 IT 회사인 애플 주식회사(Apple Inc.)를 의미하는 단어로 종종 쓰인다&#x2026;라고 생각한다.
+이름 때문에 가볍게 '사과사' 라고 불리기도 한다.
+키노트 발표회의 퍼포먼스 때문에 유명한 스티브 잡스(Steve Jobs) 때문에 잘 알려지기도 한 회사다.
+</p>
+
+<p>
+아래는 개인적인 관점으로 애플을 설명하기에 좋을 듯한 주제로 분류한 내용이다.
+</p>
+
+<div id="outline-container-orgbc9b263" class="outline-2">
+<h2 id="orgbc9b263">맥</h2>
+<div class="outline-text-2" id="text-orgbc9b263">
+<p>
+맥(Mac) 혹은 매킨토시(Machintosh)는 애플에서 개발한 개인용 데스크톱 PC의 이름이다.
+현재는 맥북(Macbook), 맥북프로(Macbook Pro), 아이맥(iMac), 맥프로(Mac Pro) 등 다양한 타입의 PC 제품을 출시하고 있다.
+현재의 애플을 있게 한 주역 중 하나다.
+</p>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/are-you-ok-github.html">깃허브 너 괜찮니?</a></h2>
-<div class="article-link-date">
-2020년 4월 23일 작성</div>
+<div id="outline-container-org28c5da2" class="outline-2">
+<h2 id="org28c5da2">아이폰</h2>
+<div class="outline-text-2" id="text-org28c5da2">
+<p>
+아이폰(iPhone)은 전 세계에 스마트폰을 대중화 시킨 가장 큰 주역이고
+애플이 현재처럼 성장할 수 있게 한 가장 큰 주역이기도 하다.
+아이폰의 OS는 iOS인데 덕분에 이 iOS도 굉장히 유명해지기도 했다.
+</p>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/for-good-ad.html">가독성과 광고 배치 사이의 고민</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 작성</div>
+<div id="outline-container-org6978af1" class="outline-2">
+<h2 id="org6978af1">아이패드 및 기타</h2>
+<div class="outline-text-2" id="text-org6978af1">
+<p>
+맥과 아이폰 이후로 가장 유명한 제품이 있다면 태블릿 디바이스인 아이패드(iPad)가 있다.
+초기에는 화면만 큰 아이폰 취급을 받기도 했지만
+결국 태블릿을 하나의 카테고리로 만들었다.
+</p>
+
+<p>
+지금은 아예 PC를 대체하는 대안 PC로 성장 시키려는 전략을 가지고 있는 것으로 보인다.
+아이패드의 OS도 iOS 였지만 지금은 이름을 iPadOS 로 바꿔서 기존 iOS 와 다르게 특화 시키겠다는 전략 또한 보여주고 있다.
+</p>
+
+<p>
+이 외에 스마트 워치(watch)인 애플 워치와 애플 TV 등 다양한 제품을 출시하고 있다.
+과거에는 아이팟(iPod) 같은 휴대용 음악 플레이어도 유명한 편이었다.
+</p>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/humanlike-google.html">구글 서비스의 인간스러움(?)</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 작성</div>
+<div id="outline-container-org0f0d537" class="outline-2">
+<h2 id="org0f0d537">소프트웨어</h2>
+<div class="outline-text-2" id="text-org0f0d537">
+<p>
+<a href="macos.html">macOS</a>를 더불어 iOS 와 같은 유명한 OS(Operating System) 소프트웨어를 개발하기도 했지만,
+iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 영향을 끼친 소프트웨어를 개발하기도 했다.
+물론 이 외에도 다양한 소프트웨어를 개발하고 보급하고 있지만 이 둘이 아무래도 가장 큰 의미를 가지고 있는 것 같다.
+</p>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/weird-github-page.html">왜 GitHub Pages의 일부 글이 나타나지 않았을까?</a></h2>
-<div class="article-link-date">
-2020년 4월 14일 작성</div>
+<div id="outline-container-org595c34a" class="outline-2">
+<h2 id="org595c34a">세계 최고의 시가총액을 가진 회사</h2>
+<div class="outline-text-2" id="text-org595c34a">
+<p>
+관점에 따라서는 애플을 설명하는 가장 좋은 말 일지도 모른다.
+물론 항상 그런 것은 아니지만, 2011년 시가총액 톱을 차지한 이후 계속 높은 자리를 차지하고 있다.
+</p>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/seorenn-publish.html">정적 사이트 생성을 위한 개인적인 욕망의 분출(?)</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 작성</div>
+<div class="mid-ad-container">
+<ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
-</div>
-</div>
-<div class="summary-container">
-<h1>❏ NOTE에서 최근 업데이트된 글</h1>
+<hr /><div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
@@ -166,48 +209,6 @@
 2020년 4월 30일 수정</div>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/apple.html">애플</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
-<div class="article-link-date">
-2020년 4월 28일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/gitignore.html">gitignore</a></h2>
-<div class="article-link-date">
-2020년 4월 28일 수정</div>
-</div>
-</div>
-</div>
-<div class="summary-container">
-<h1>❏ LOG의 최신 글</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/log/2020-04.html">2020년 4월의 로그</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
-</div>
-</div>
-</div>
-<div class="mid-ad-container">
-<ins class="adsbygoogle mid-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </section>
 <div class="side-ad-container">
