--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4db1561">외부 링크</a></li>
+<li><a href="#org64abbe0">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -91,9 +92,9 @@
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org4db1561" class="outline-2">
-<h2 id="org4db1561">외부 링크</h2>
-<div class="outline-text-2" id="text-org4db1561">
+<div id="outline-container-org64abbe0" class="outline-2">
+<h2 id="org64abbe0">외부 링크</h2>
+<div class="outline-text-2" id="text-org64abbe0">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">🌏스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏The (Subjective) Spacemacs Howto</a>:
@@ -117,6 +118,13 @@
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<div class="article-link-date">
+2020년 4월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
@@ -134,13 +142,6 @@
 <h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
-<div class="article-link-date">
-2020년 4월 16일 수정</div>
 </div>
 </div>
 </div>
