--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pngquant.html">pngquant</a></h2>
+<div class="article-link-date">
+2020년 5월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 4월 30일 수정</div>
@@ -180,16 +187,16 @@
 2020년 4월 30일 수정</div>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
-<div class="article-link-date">
-2020년 4월 28일 수정</div>
-</div>
-</div>
 </div>
 <div class="summary-container">
 <h1>❏ LOG의 최신 글</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/log/2020-05.html">2020년 5월의 로그</a></h2>
+<div class="article-link-date">
+2020년 4월 30일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/log/2020-04.html">2020년 4월의 로그</a></h2>
