--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -69,22 +70,22 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgfdc38b9">기본 사용법</a>
+<li><a href="#org0cf1327">기본 사용법</a>
 <ul>
-<li><a href="#org05e0f5e">패키지 검색</a></li>
-<li><a href="#org90805ea">패키지 정보</a></li>
-<li><a href="#org78326c3">패키지 설치</a></li>
-<li><a href="#org0141564">만료된 버전 확인</a></li>
-<li><a href="#org952ba9e">패키지 업그레이드</a></li>
-<li><a href="#orgfc15f89">구 버전 삭제하기</a></li>
-<li><a href="#org16166e8">패키지 삭제(uninstall)</a></li>
-<li><a href="#org88459d6">의사 양반(?)</a></li>
+<li><a href="#org75698d2">패키지 검색</a></li>
+<li><a href="#org52af838">패키지 정보</a></li>
+<li><a href="#orgb1ca3f4">패키지 설치</a></li>
+<li><a href="#orgd8e5fdd">만료된 버전 확인</a></li>
+<li><a href="#orgb27b9ca">패키지 업그레이드</a></li>
+<li><a href="#org777f0af">구 버전 삭제하기</a></li>
+<li><a href="#org07963cc">패키지 삭제(uninstall)</a></li>
+<li><a href="#orgd79c334">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org26e6703">구 버전 패키지 사용하기</a></li>
-<li><a href="#orgafd4ca9">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgdcef8d6">Cask</a></li>
-<li><a href="#org641b682">외부 링크</a></li>
+<li><a href="#org7d7a16b">구 버전 패키지 사용하기</a></li>
+<li><a href="#org517482a">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#org1262603">Cask</a></li>
+<li><a href="#org9cb0095">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -95,31 +96,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-orgfdc38b9" class="outline-2">
-<h2 id="orgfdc38b9">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgfdc38b9">
+<div id="outline-container-org0cf1327" class="outline-2">
+<h2 id="org0cf1327">기본 사용법</h2>
+<div class="outline-text-2" id="text-org0cf1327">
 </div>
-<div id="outline-container-org05e0f5e" class="outline-3">
-<h3 id="org05e0f5e">패키지 검색</h3>
-<div class="outline-text-3" id="text-org05e0f5e">
+<div id="outline-container-org75698d2" class="outline-3">
+<h3 id="org75698d2">패키지 검색</h3>
+<div class="outline-text-3" id="text-org75698d2">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org90805ea" class="outline-3">
-<h3 id="org90805ea">패키지 정보</h3>
-<div class="outline-text-3" id="text-org90805ea">
+<div id="outline-container-org52af838" class="outline-3">
+<h3 id="org52af838">패키지 정보</h3>
+<div class="outline-text-3" id="text-org52af838">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org78326c3" class="outline-3">
-<h3 id="org78326c3">패키지 설치</h3>
-<div class="outline-text-3" id="text-org78326c3">
+<div id="outline-container-orgb1ca3f4" class="outline-3">
+<h3 id="orgb1ca3f4">패키지 설치</h3>
+<div class="outline-text-3" id="text-orgb1ca3f4">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -130,9 +131,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0141564" class="outline-3">
-<h3 id="org0141564">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-org0141564">
+<div id="outline-container-orgd8e5fdd" class="outline-3">
+<h3 id="orgd8e5fdd">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-orgd8e5fdd">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -144,9 +145,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org952ba9e" class="outline-3">
-<h3 id="org952ba9e">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org952ba9e">
+<div id="outline-container-orgb27b9ca" class="outline-3">
+<h3 id="orgb27b9ca">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-orgb27b9ca">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -160,9 +161,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgfc15f89" class="outline-3">
-<h3 id="orgfc15f89">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-orgfc15f89">
+<div id="outline-container-org777f0af" class="outline-3">
+<h3 id="org777f0af">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-org777f0af">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -176,18 +177,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org16166e8" class="outline-3">
-<h3 id="org16166e8">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-org16166e8">
+<div id="outline-container-org07963cc" class="outline-3">
+<h3 id="org07963cc">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-org07963cc">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org88459d6" class="outline-3">
-<h3 id="org88459d6">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-org88459d6">
+<div id="outline-container-orgd79c334" class="outline-3">
+<h3 id="orgd79c334">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-orgd79c334">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -198,9 +199,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org26e6703" class="outline-2">
-<h2 id="org26e6703">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org26e6703">
+<div id="outline-container-org7d7a16b" class="outline-2">
+<h2 id="org7d7a16b">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org7d7a16b">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -215,9 +216,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgafd4ca9" class="outline-2">
-<h2 id="orgafd4ca9">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-orgafd4ca9">
+<div id="outline-container-org517482a" class="outline-2">
+<h2 id="org517482a">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org517482a">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -320,9 +321,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgdcef8d6" class="outline-2">
-<h2 id="orgdcef8d6">Cask</h2>
-<div class="outline-text-2" id="text-orgdcef8d6">
+<div id="outline-container-org1262603" class="outline-2">
+<h2 id="org1262603">Cask</h2>
+<div class="outline-text-2" id="text-org1262603">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -356,9 +357,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-org641b682" class="outline-2">
-<h2 id="org641b682">외부 링크</h2>
-<div class="outline-text-2" id="text-org641b682">
+<div id="outline-container-org9cb0095" class="outline-2">
+<h2 id="org9cb0095">외부 링크</h2>
+<div class="outline-text-2" id="text-org9cb0095">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
@@ -377,6 +378,13 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pngquant.html">pngquant</a></h2>
+<div class="article-link-date">
+2020년 5월 1일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/svg.html">SVG</a></h2>
