--- a/note/index.html
+++ b/note/index.html
@@ -65,6 +65,13 @@
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pngquant.html">pngquant</a></h2>
+<div class="article-link-date">
+2020년 5월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 4월 30일 수정</div>
