--- a/note/pngquant.html
+++ b/note/pngquant.html
@@ -4,14 +4,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>LOG의 모든 글 - Seorenn</title>
-<meta name="twitter:title" content="LOG의 모든 글" />
-<meta name="og:title" content="LOG의 모든 글" />
-<meta name="description" content="LOG의 모든 글" />
-<meta name="twitter:description" content="LOG의 모든 글" />
-<meta name="og:description" content="LOG의 모든 글" />
-<link rel="canonical" href="https://seorenn.github.io/log/" />
-<meta property="og:url" content="https://seorenn.github.io/log/" />
+<title>pngquant - Seorenn</title>
+<meta name="twitter:title" content="pngquant" />
+<meta name="og:title" content="pngquant" />
+<meta name="description" content="pngquant로 PNG 이미지 압축하기" />
+<meta name="twitter:description" content="pngquant로 PNG 이미지 압축하기" />
+<meta name="og:description" content="pngquant로 PNG 이미지 압축하기" />
+<link rel="canonical" href="https://seorenn.github.io/note/pngquant.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/pngquant.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -63,18 +63,89 @@
 <div class="left-empty">
 </div>
 <section class="content">
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/log/2020-05.html">2020년 5월의 로그</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
+<header>
+<h1>pngquant</h1>
+<div class="title-date">2020년 5월 1일 수정</div>
+</header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#orgc2596f2">설치</a></li>
+<li><a href="#orgda9939e">사용법</a></li>
+<li><a href="#orgdc5a5e5">외부 링크</a></li>
+</ul>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/log/2020-04.html">2020년 4월의 로그</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
+<p>
+pngquant는 PNG 이미지 포맷을 압축하는 오픈소스 <a href="cli.html">CLI</a> 도구이자 라이브러리다.
+압축이라고 표현했지만 사실상 팔레트(palette)를 사용하는 방식으로
+색상 수를 최소화 시켜서 이미지를 디더링(dithering) 등을 동원해 최적화 하는 방식으로
+파괴 압축(lossy compression)을 하는 것으로 추정한다.
+</p>
+
+<div id="outline-container-orgc2596f2" class="outline-2">
+<h2 id="orgc2596f2">설치</h2>
+<div class="outline-text-2" id="text-orgc2596f2">
+<p>
+<a href="macos.html">macOS</a>에서는 <a href="homebrew.html">Homebrew</a>로 쉽게 설치할 수 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">brew install pngquant
+</pre>
+</div>
+<p>
+이 외에도 <a target="_blank" href="https://pngquant.org/">🌏공식 사이트</a>에서 다양한 플랫폼 용 설치 방법을 찾을 수 있다.
+</p>
+</div>
+</div>
+<div id="outline-container-orgda9939e" class="outline-2">
+<h2 id="orgda9939e">사용법</h2>
+<div class="outline-text-2" id="text-orgda9939e">
+<p>
+단순히 이미지 파일을 인자로 넘기면 압축해 준다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">pngquant image.png
+</pre>
+</div>
+<p>
+이렇게 하면 <code>image-fs8.png</code> 라는 파일 이름으로 압축된 파일이 생성된다.
+fs8 이라는 이름은 압축 방식과 관련된 이름으로 추측된다.
+</p>
+
+<p>
+옵션으로 색상 수를 조절할 수도 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">pngquant <span style="color: #da8548; font-weight: bold;">64</span> image.png
+</pre>
+</div>
+<p>
+이렇게 하면 64색으로 이미지를 최적화 시키기 때문에 색상 수가 많이 필요한 사진 등은 디더링이 생길 수도 있다.
+</p>
+
+<p>
+일반적인 *NIX <a href="cli.html">CLI</a> 도구들 처럼 파이프도 사용이 가능하다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">... | pngquant <span style="color: #da8548; font-weight: bold;">32</span> | ...
+</pre>
+</div>
+<p>
+파일 이름이 주어지지 않으면 태연하게 stdin으로 입력 받아서 stdout으로 출력해 주는 친절한 도구다.
+</p>
+
+<p>
+이 외에도 많은 옵션이 제공되니 <code>--help</code> 로 살펴보자.
+</p>
+</div>
+</div>
+<div id="outline-container-orgdc5a5e5" class="outline-2">
+<h2 id="orgdc5a5e5">외부 링크</h2>
+<div class="outline-text-2" id="text-orgdc5a5e5">
+<ul class="org-ul">
+<li><a target="_blank" href="https://pngquant.org/">🌏pngquant 공식 사이트</a></li>
+</ul>
 </div>
 </div>
 <div class="mid-ad-container">
