update with 12 changes

--- a/note/seorenn.html
+++ b/note/seorenn.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -64,7 +65,7 @@
 <section class="content">
 <header>
 <h1>Seorenn</h1>
-<div class="title-date">2020년 4월 18일 수정</div>
+<div class="title-date">2020년 5월 1일 수정</div>
 </header>
 <p>
 Seorenn(세오렌)은 우리은하 태양계 지구 대한민국에 사는 사람이다.
@@ -90,12 +91,12 @@ Java와 C++은 아주 혐오하는 것 같다.
 </p>
 
 <p>
-기타 고전 건축이나 기둥에 흥분하는 변태 같다.
+기타 고전 건축이나 기둥, 아치에 흥분하는 변태 같다.
 </p>
 
-<div id="outline-container-org20c99f3" class="outline-2">
-<h2 id="org20c99f3">외부 링크</h2>
-<div class="outline-text-2" id="text-org20c99f3">
+<div id="outline-container-orgd6cbaed" class="outline-2">
+<h2 id="orgd6cbaed">외부 링크</h2>
+<div class="outline-text-2" id="text-orgd6cbaed">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
 <li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
