--- a/index.html
+++ b/index.html
@@ -126,6 +126,20 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs-lisp-functions.html">Emacs Lisp Functions</a></h2>
+<div class="article-link-date">
+2020년 5월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs-lisp.html">Emacs Lisp</a></h2>
+<div class="article-link-date">
+2020년 5월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
 <div class="article-link-date">
 2020년 5월 1일 수정</div>
@@ -176,20 +190,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
 <div class="article-link-date">
 2020년 4월 30일 수정</div>
 </div>
